--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reloj Flip</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="clock">
+        <div class="flip-clock" id="hours">12</div>
+        <div class="flip-clock" id="minutes">00</div>
+        <div class="ampm" id="ampm">AM</div>
+    </div>
+
+    <script>
+        function updateClock() {
+            const now = new Date();
+            let hours = now.getHours();
+            let minutes = now.getMinutes();
+            const ampm = hours >= 12 ? 'PM' : 'AM';
+            
+            hours = hours % 12;
+            hours = hours ? hours : 12; // Si la hora es 0, convertirla a 12
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+            
+            document.getElementById('hours').textContent = hours;
+            document.getElementById('minutes').textContent = minutes;
+            document.getElementById('ampm').textContent = ampm;
+        }
+
+        setInterval(updateClock, 1000);
+        updateClock(); // Llamar para iniciar el reloj inmediatamente
+    </script>
+</body>
+</html>
+
+// Código CSS
+
+body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: transparent;
+}
+
+.clock {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.flip-clock {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 100px;
+    color: #d9d9d9;
+    background-color: #262626;
+    width: 150px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.ampm {
+    position: absolute;
+    left: 10px;
+    bottom: -25px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: #d9d9d9;
+}
+
+
+
 
