--- a/index.html
+++ b/index.html
@@ -5,48 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj Flip</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: transparent;
+        }
 
-body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: transparent;
-}
+        .clock {
+            position: relative;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
 
-.clock {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
+        .flip-clock {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 700;
+            font-size: 100px;
+            color: #d9d9d9;
+            background-color: #262626;
+            width: 150px;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+        }
 
-.flip-clock {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 100px;
-    color: #d9d9d9;
-    background-color: #262626;
-    width: 150px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.ampm {
-    position: absolute;
-    left: 10px;
-    bottom: -25px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    color: #d9d9d9;
-}
-
+        .ampm {
+            position: absolute;
+            left: 10px;
+            bottom: -25px;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 700;
+            font-size: 20px;
+            color: #d9d9d9;
+        }
+    </style>
 </head>
 <body>
     <div class="clock">
@@ -76,3 +75,4 @@ body {
     </script>
 </body>
 </html>
+
