--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         }
 
         .flip-clock {
+            position: relative;
             font-family: 'Poppins', sans-serif;
             font-weight: 700;
             font-size: 100px;
@@ -34,12 +35,24 @@
             justify-content: center;
             align-items: center;
             border-radius: 10px;
+            overflow: hidden;
+        }
+
+        /* Línea horizontal central para el efecto "flip" */
+        .flip-clock::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #d9d9d9;
+            top: 50%;
+            transform: translateY(-50%);
         }
 
         .ampm {
             position: absolute;
             left: 10px;
-            bottom: -25px;
+            bottom: 10px;
             font-family: 'Poppins', sans-serif;
             font-weight: 700;
             font-size: 20px;
@@ -49,9 +62,11 @@
 </head>
 <body>
     <div class="clock">
-        <div class="flip-clock" id="hours">12</div>
+        <div class="flip-clock" id="hours">
+            12
+            <div class="ampm" id="ampm">AM</div>
+        </div>
         <div class="flip-clock" id="minutes">00</div>
-        <div class="ampm" id="ampm">AM</div>
     </div>
 
     <script>
@@ -75,4 +90,3 @@
     </script>
 </body>
 </html>
-
