--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
 </head>
 <body>
     <div class="clock">
-        <div class="flip-clock" id="hours">
-            12
+        <div class="flip-clock" id="hours-container">
+            <span id="hours">12</span>
             <div class="ampm" id="ampm">AM</div>
         </div>
-        <div class="flip-clock" id="minutes">00</div>
+        <div class="flip-clock" id="minutes-container">
+            <span id="minutes">00</span>
+        </div>
     </div>
 
     <script>
