--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj Flip</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -58,6 +58,16 @@
             font-size: 20px;
             color: #d9d9d9;
         }
+
+        .day {
+            position: absolute;
+            right: 10px;
+            bottom: 10px;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300; /* Font-weight light */
+            font-size: 20px;
+            color: #d9d9d9;
+        }
     </style>
 </head>
 <body>
@@ -68,6 +78,7 @@
         </div>
         <div class="flip-clock" id="minutes-container">
             <span id="minutes">00</span>
+            <div class="day" id="day">Lunes</div>
         </div>
     </div>
 
@@ -77,15 +88,19 @@
             let hours = now.getHours();
             let minutes = now.getMinutes();
             const ampm = hours >= 12 ? 'PM' : 'AM';
-            
+
             hours = hours % 12;
             hours = hours ? hours : 12; // Si la hora es 0, convertirla a 12
             hours = hours < 10 ? '0' + hours : hours; // Añadir 0 si es un solo dígito
             minutes = minutes < 10 ? '0' + minutes : minutes;
-            
+
+            const days = ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'];
+            const day = days[now.getDay()];
+
             document.getElementById('hours').textContent = hours;
             document.getElementById('minutes').textContent = minutes;
             document.getElementById('ampm').textContent = ampm;
+            document.getElementById('day').textContent = day;
         }
 
         setInterval(updateClock, 1000);
